--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,10 +1,20 @@
 {
+  "name": "your-react-app",
+  "version": "1.0.0",
+  "private": true,
   "dependencies": {
-    "axios": "^1.10.0",
-    "bcrypt": "^6.0.0",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "mysql2": "^3.14.1",
-    "nodemailer": "^7.0.5"
+    "axios": "^1.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   }
+  ,
+  "proxy": "http://localhost:5000"
 }
