--- a/Frontend/fashion/package.json
+++ b/Frontend/fashion/package.json
@@ -11,11 +11,19 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
+    "bcrypt": "^6.0.0",
+    "bootstrap": "^5.3.7",
     "firebase": "^11.10.0",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
