--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-
     "axios": "^1.6.0",
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "mysql2": "^3.14.3",
+    "nodemailer": "^7.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -15,8 +20,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-
-  }
-  ,
+  },
   "proxy": "http://localhost:5000"
 }
