--- a/Frontend/fashion/package.json
+++ b/Frontend/fashion/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.7",
     "firebase": "^11.10.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.540.0",
     "nodemailer": "^7.0.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
