--- a/Frontend/fashion/package.json
+++ b/Frontend/fashion/package.json
@@ -13,11 +13,13 @@
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.7",
+    "chart.js": "^4.5.0",
     "firebase": "^11.10.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.540.0",
     "nodemailer": "^7.0.5",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
