--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,15 +6,14 @@
     "axios": "^1.6.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-
-    "multer": "^2.0.2",
-
     "jsonwebtoken": "^9.0.2",
-
+    "multer": "^2.0.2",
     "mysql2": "^3.14.3",
     "nodemailer": "^7.0.5",
+    "razorpay": "^2.9.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
