--- a/Frontend/fashion/package.json
+++ b/Frontend/fashion/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.7",
     "chart.js": "^4.5.0",
+    "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.540.0",
